--- a/專題進度.md
+++ b/專題進度.md
@@ -43,3 +43,12 @@
         at android.os.Looper.loop(Looper.java:223) 
         at android.os.HandlerThread.run(HandlerThread.java:67) 
 ```
+
+
+## 5/31
+- 轉向問題
+
+https://developer.android.com/training/camera2/camera-preview#inset_portrait_mode
+
+
+- 找出臉並截圖
